demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
